# bookstore

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml
bookstore/: settings.py
mysite/: settings.py  urls.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py  0002_category_active_alter_category_description_and_more.py  0002_rename_categoriy_product_category.py
product/models/: __init__.py  product.py
product/serializers/: product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/tests/tests_serializers/: test_product_serializer.py
product/viewsets/: category_viewset.py  product_viewset.py
